further work on the overflow issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -174,8 +174,7 @@ body {
     }
 
     @include smaller-smartphone {
-      font-size: 5.2rem;
-      line-height: 1.5;
+      font-size: 5rem;
     }
   }
 
